--- a/requirements.txt
+++ b/requirements.txt
@@ -22,13 +22,13 @@ Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
 mypy-extensions==1.0.0
-mysqlclient==2.2.4
 openai==1.33.0
 packaging==24.1
 pathspec==0.12.1
 platformdirs==4.2.2
 pydantic==2.7.3
 pydantic_core==2.18.4
+PyMySQL==1.1.1
 python-dotenv==1.0.1
 requests==2.32.3
 sniffio==1.3.1
