--- a/Caddyfile
+++ b/Caddyfile
@@ -1,3 +1,7 @@
-http://66.151.33.198 {
+www.gpttaro.online {
+    redir https://gpttaro.online{uri}
+}
+
+gpttaro.online {
     reverse_proxy localhost:8000
 }
