--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 alembic==1.13.1
 annotated-types==0.7.0
 anyio==4.4.0
-black==24.4.2
+bleach==6.1.0
 blinker==1.8.2
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+Deprecated==1.2.14
 distro==1.9.0
 Flask==3.0.3
 Flask-Login==0.6.3
@@ -21,8 +22,11 @@ idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
+Markdown==3.6
 MarkupSafe==2.1.5
 mypy-extensions==1.0.0
+mysqlclient==2.2.4
+netaddr==1.3.0
 openai==1.33.0
 packaging==24.1
 pathspec==0.12.1
@@ -32,9 +36,13 @@ pydantic_core==2.18.4
 PyMySQL==1.1.1
 python-dotenv==1.0.1
 requests==2.32.3
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.30
 tqdm==4.66.4
-typing_extensions==4.12.2
+typing_extensions==4.12.1
 urllib3==2.2.1
+webencodings==0.5.1
 Werkzeug==3.0.3
+wrapt==1.16.0
+yookassa==3.2.0
